force-app/main/default/objects/Information__c/Information__c.object-meta.xml
<CustomObject>
    <label>お知らせ</label>
    <nameField>
        <label>タイトル</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>