force-app/main/default/objects/Information__c/fields/content__c.field-meta.xml
<CustomField>
    <fullName>content__c</fullName>
    <label>内容</label>
    <type>TextArea</type>
</CustomField>