force-app/main/default/objects/Information__c/fields/PublishEnd__c.field-meta.xml
<CustomField>
    <fullName>PublishEnd__c</fullName>
    <formula>PublishEndDate__c &gt;= TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>掲載終了</label>
    <type>Checkbox</type>
</CustomField>