force-app/main/default/objects/Information__c/listViews/test.listView-meta.xml
<ListView>
    <fullName>test</fullName>
    <booleanFilter>1 OR (2 AND 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>PublishStartDate__c</columns>
    <columns>PublishEndDate__c</columns>
    <columns>AlwaysPublish__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AlwaysPublish__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PublishStart__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>PublishEnd__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>お知らせ</label>
</ListView>